add ui + show winner + check tie

--- a/index.html
+++ b/index.html
@@ -8,17 +8,20 @@
 </head>
 <body>
     <div id="content">
-      <div id="header">
-
-      </div>
+      <div id="header">Tic Tac Toe</div>
       <div id="main">
+        <div id="info">
+          <div id="player-one-name"></div>
+          <div id="result"> </div>
+          <div id="player-two-name">  </div>
+        </div>
         <div id="gb-frame">
           
         </div>
         <div><button id="restart">Restart</button></div>
       </div>
       <div id="footer">
-
+        <a id="link" href="https://github.com/Gorz-WD/tic-tac-toe" target="_blank">Github</a>
       </div>
     </div>
   <script src="script.js"></script>
